--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "earthquake-notify"
-version = "0.1.0"
+name = "Rnotify"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
@@ -11,3 +11,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1", features = ["v4"] }
 mysql_async = "0.35.1"
+tokio-tungstenite = { version = "0.26.0", features = ["native-tls"] }
+futures-util = "0.3"
